@@ -1,3 +1,11 @@
+2006-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mml.el (mml-insert-mime): Ignore cached contents of
+	message/external-body part.
+
+	* mm-decode.el (mm-get-part): Add optional 'no-cache' argument.
+	(mm-insert-part): Ditto.
+
 2006-03-23  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* pgg-gpg.el (pgg-gpg-update-agent): Only use make-network-process
